All links work and all re-usable styling is consistently working.

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,39 +15,44 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header tc-navbar-brand">
-            <a class="navbar-brand tc-navbar-brand" href="#">Thomas Calhoun Jr.</a>
+            <a class="navbar-brand tc-navbar-brand tc-navbar-links" href="index.html">Thomas Calhoun Jr.</a>
             </div>
-            <ul class="nav navbar-nav navbar-right tc-navbar-links">
-                <li><a href="#">About</a></li>
-                <li><a href="#"> Portfolio </a></li>
-                <li><a href="#">Contact</a></li>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="tc-navbar-links"><a href="index.html">About</a></li>
+                <li class="tc-navbar-links"><a href="portfolio.html"> Portfolio </a></li>
+                <li class="tc-navbar-links"><a href="contact.html">Contact</a></li>
             </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-    <div class="header-img-container"></div>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
+    <div class="header-img-container tc-img-padding"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7 tc-about-me">
+                <header class="tc-about-me-header"><h1>Portfolio</h1></header>
+                <hr class="tc-about-me-hr">
+                <div><img class="tc-about-me-img-float" src="assets/images/tcjr.jpg" alt="Smiley face" height="250" width="250">
+                    <p class="tc-about-me-txt-float">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque earum odio, necessitatibus modi minima distinctio 
+                        porro similique voluptate voluptaslibero quod accusantium dicta facere architecto. Quaerat nostrum quod excepturi pariatur.
+                    </p>
+                </div>  
+            </div>
+            <div class="col-md-3 tc-connect-with-me">
+                <header class="tc-about-me-header"><h2>Connect with Me</h2></header>
+                <hr class="tc-about-me-hr">
+                <ul>
+                    <li class="tc-connect-with-me-li"><a href="https://www.linkedin.com/in/tcalhounjr" target="_blank"><img src="assets/images/linkedin.png" alt="Smiley face" height="40" width="40"></a></li>
+                    <li class="tc-connect-with-me-li"><a href="https://github.com/tcalhounjr" target="_blank"><img  src="assets/images/github.png" alt="Smiley face" height="40" width="40"></a></li>
+                    <li class="tc-connect-with-me-li"><a href="https://stackoverflow.com/users/5281267/thomas-calhoun-jr" target="_blank"><img class="tc-connect-with-me-icons" src="assets/images/stack.png" alt="Smiley face" height="40" width="40"></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <nav class="navbar fixed-bottom navbar-default tc-navbar">
-        <p id="tc-footer" class="navbar-text">
+        <footer id="tc-footer" class="navbar-text">
             YET ANOTHER COPYRIGHT DATE TEST
-        </p>
+        </footer>
     </nav>
     <script src="assets/js/date.js"></script>
 </body>
