All pages built and styled appropriately sans responsive layouts implementation

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,15 +28,42 @@
     <div class="header-img-container tc-img-padding"></div>
     <div class="container">
         <div class="row">
-            <div class="col-md-7 tc-about-me">
+            <div class="col-md-7 tc-portfolio">
                 <header class="tc-about-me-header"><h1>Portfolio</h1></header>
-                <hr class="tc-about-me-hr">
-                <div><img class="tc-about-me-img-float" src="assets/images/tcjr.jpg" alt="Smiley face" height="250" width="250">
-                    <p class="tc-about-me-txt-float">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque earum odio, necessitatibus modi minima distinctio 
-                        porro similique voluptate voluptaslibero quod accusantium dicta facere architecto. Quaerat nostrum quod excepturi pariatur.
-                    </p>
-                </div>  
+                <hr class="tc-portfolio-hr">
+                <div class="row">
+                    <div class="col-md-3 tc-portfolio-row-items">
+                        <img src="assets/images/tcjr.jpg" alt="Smiley face" height="150" width="150">
+                    </div>
+                    <div class="col-md-3 tc-portfolio-row-items">
+                        <img class="tc-portfolio-col-img" src="assets/images/tcjr.jpg" alt="Smiley face" height="150" width="150">
+                    </div>
+                    <div class="col-md-3 tc-portfolio-row-items">
+                        <img class="tc-portfolio-col-img" src="assets/images/tcjr.jpg" alt="Smiley face" height="150" width="150">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 tc-portfolio-row-items">
+                        <img src="assets/images/tcjr.jpg" alt="Smiley face" height="150" width="150">
+                    </div>
+                    <div class="col-md-3 tc-portfolio-row-items">
+                        <img class="tc-portfolio-col-img" src="assets/images/tcjr.jpg" alt="Smiley face" height="150" width="150">
+                    </div>
+                    <div class="col-md-3 tc-portfolio-row-items">
+                        <img class="tc-portfolio-col-img" src="assets/images/tcjr.jpg" alt="Smiley face" height="150" width="150">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 tc-portfolio-row-items">
+                        <img src="assets/images/tcjr.jpg" alt="Smiley face" height="150" width="150">
+                    </div>
+                    <div class="col-md-3 tc-portfolio-row-items">
+                        <img class="tc-portfolio-col-img" src="assets/images/tcjr.jpg" alt="Smiley face" height="150" width="150">
+                    </div>
+                    <div class="col-md-3 tc-portfolio-row-items">
+                        <img class="tc-portfolio-col-img" src="assets/images/tcjr.jpg" alt="Smiley face" height="150" width="150">
+                    </div>
+                </div>    
             </div>
             <div class="col-md-3 tc-connect-with-me">
                 <header class="tc-about-me-header"><h2>Connect with Me</h2></header>
