--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TCJR Portfolio</title>
     <!-- Latest compiled and minified CSS -->
+    <link rel="icon" href="assets/images/favicon/tcjr.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
@@ -18,7 +19,7 @@
             <a class="navbar-brand tc-navbar-brand tc-navbar-links" href="index.html">Thomas Calhoun Jr.</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-                <li class="tc-navbar-links"><a href="index.html">About</a></li>
+                <li class="tc-navbar-links"><a class="tc-test" href="index.html"><p>About</p></a></li>
                 <li class="tc-navbar-links"><a href="portfolio.html"> Portfolio </a></li>
                 <li class="tc-navbar-links"><a href="contact.html">Contact</a></li>
             </ul>
@@ -33,8 +34,9 @@
                 <hr class="tc-about-me-hr">
                 <div><img class="tc-about-me-img-float" src="assets/images/tcjr.jpg" alt="Smiley face" height="250" width="250">
                     <p class="tc-about-me-txt-float">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque earum odio, necessitatibus modi minima distinctio 
-                        porro similique voluptate voluptaslibero quod accusantium dicta facere architecto. Quaerat nostrum quod excepturi pariatur.
+                        Now that you're here, it's clear that I'm not a UX/UI designer. However, I am extremely interested in solving some of the world's
+                        toughest problems through software. Far too many times I've had ideas that never became more than that - an idea. Meanwhile, someone
+                        else not only had the idea but implemented it. Becoming a full-stack web developer is my way creating the things I wish existed.
                     </p>
                 </div>  
             </div>
